--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ serde_json = "1"
 tokio = { version = "1.36", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
 colored = "2"
+thiserror = "1"
