fix: extend the Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,24 @@
 name = "lospec-cli"
 version = "0.1.0"
 edition = "2021"
+homepage = "https://github.com/jmg-duarte/lospec-cli"
+repository = "https://github.com/jmg-duarte/lospec-cli"
+readme = "README.md"
+license-file = "LICENSE"
+authors = ["José Duarte <duarte.gmj@gmail.com>"]
+keywords = ["color", "palette", "lospec", "cli"]
+categories = ["command-line-utilities", "game-development"]
+documentation = "https://docs.rs/lospec-cli"
 
 [[bin]]
 path = "src/bin/main.rs"
 name = "lospec"
+
+[lints.rust]
+unsafe_code = "forbid"
+
+[lints.clippy]
+enum_glob_use = "deny"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
